EKS/performance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: performance-deployment
  labels:
    app: performance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: performance
  template:
    metadata:
      labels:
        app: performance
    spec:
      nodeSelector:
        role: backend
      containers:
      - name: performance
        image: 205930629963.dkr.ecr.ap-northeast-2.amazonaws.com/ticket101-ecr:performance-latest
        imagePullPolicy: IfNotPresent
        
        ports:
          - containerPort: 5005
