EKS/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
  labels:
    app: auth
spec:
  type: ClusterIP  # ClusterIP로 변경
  selector:
    app: auth
  ports:
  - name: http
    protocol: TCP
    port: 80         # Ingress에서 접근하는 포트
    targetPort: 5002 # 컨테이너 내부 포트
