EKS/favorite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: favorite-service
  namespace: default
  labels:
    app: favorite
spec:
  type: ClusterIP  # ClusterIP로 변경
  selector:
    app: favorite
  ports:
  - name: http
    protocol: TCP
    port: 80         # Ingress에서 접근하는 포트
    targetPort: 5004 # 컨테이너 내부 포트
