EKS/performance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: performance-service
  namespace: default
  labels:
    app: performance
spec:
  type: ClusterIP  # ClusterIP로 변경
  selector:
    app: performance
  ports:
  - name: http
    protocol: TCP
    port: 80         # Ingress에서 접근하는 포트
    targetPort: 5005 # 컨테이너 내부 포트
