EKS/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: default
  labels:
    app: search
spec:
  type: ClusterIP  # ClusterIP로 변경
  selector:
    app: search
  ports:
  - name: http
    protocol: TCP
    port: 80         # Ingress에서 접근하는 포트
    targetPort: 5006 # 컨테이너 내부 포트
