EKS/survey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: survey-service
  namespace: default
  labels:
    app: survey
spec:
  type: ClusterIP  # ClusterIP로 변경
  selector:
    app: survey
  ports:
  - name: http
    protocol: TCP
    port: 80         # Ingress에서 접근하는 포트
    targetPort: 5003 # 컨테이너 내부 포트
